# parsing_cw4

./: README.md  pyproject.toml
src/: api.py  jsonsaver.py  utils.py  vacancy.py
