[tool.poetry]
name = "parsing-cw4"
version = "0.1.0"
description = ""
authors = ["evgeniya1011 <zhdavydova@mail.ru>"]
readme = "README.md"
packages = [{include = "parsing_cw4"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
